--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,11 @@ select {
 }
 
 select {
-  width: 219px;
+  width: 217px;
+}
+
+textarea {
+  font-family: inherit;
 }
 
 .submit-btn {
@@ -43,6 +47,8 @@ select {
   width: 219px;
   border: none;
   background-color: #136613;
+  color: #fff;
+  letter-spacing: 1px;
 }
 
 /* * * NOTEBOOK * * */
@@ -56,6 +62,11 @@ select {
 .margin {
   padding: 0.25rem;
   margin-left: 1rem;
+  font-weight: 700;
+}
+
+.notebook span {
+  font-weight: 400;
 }
 
 .view-block {
@@ -67,4 +78,51 @@ select {
   width: 1rem;
   border-right: 1px double red;
   /* border-style: double; */
+}
+
+/* * * MODAL * * */
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal {
+  background-color: hsl(214, 63%, 56%);
+  padding: 2rem;
+  margin: 0 auto;
+  max-width: 425px;
+  position: relative;
+  border-radius: 10px;
+  top: 20%;
+}
+
+.modal h2 {
+  margin-top: 0;
+}
+
+.modal p {
+  font-weight: 700;
+}
+
+.modal span {
+  font-weight: 400;
+}
+
+.modal button {
+  padding: 0.5rem 1.25rem;
+  margin: 0.5rem 0.75rem 0 0;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  border: none;
+  background-color: #136613;
+  color: #fff;
 }
