--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
 
 * {
   margin: 0;
@@ -187,4 +188,12 @@ textarea {
 
 .input-area {
   display: flex;
+}
+
+.icon-control {
+  margin-left: 0.75rem;
+}
+
+.icon-control i {
+  cursor: pointer;
 }
